Changed toList() method from stream to collect(Collectors.toList())